# yappla

./: .gitignore  Cargo.toml  README.md  theme.css
src/: index_list.rs  launcher_item.rs  launcher_scroll.rs  main.rs  menu_item_model.rs  scroll.rs  search.rs
src/modes/: apps_mode.rs  echo_mode.rs  mod.rs  mode.rs
